crates/rattler_conda_types/src/match_spec/snapshots/rattler_conda_types__match_spec__parse__tests__matchspec_to_string_with_flags.snap
---
source: crates/rattler_conda_types/src/match_spec/parse.rs
expression: vec_strings
---
[
    "foo 1.0.*[build_number=\">6\"]",
    "conda-forge/linux-64:foospace:foo 1.0.* py27_0*[extras=[bar, baz], md5=\"8b1a9953c4611296a827abf8c47804d7\", sha256=\"315f5bdb76d078c43b8ac0064e4a0164612b1fce77c869345bfc94c75894edd3\", build_number=\">=6\", fn=\"foo-1.0-py27_0.tar.bz2\", url=\"https://conda.anaconda.org/conda-forge/linux-64/foo-1.0-py27_0.tar.bz2\", license=\"MIT\", flags=[~flag1, ~flag2, ?flag3, foobar:amd]]",
]
